@@ -8,7 +8,7 @@ import logging, logging.handlers
 
 # log_level can be set to one of (prefixed by logging.)
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
-log_level = logging.DEBUG
+log_level = logging.WARNING
 
 DEFAULT_DEVICE_IP = "169.254.2.1"
 DEFAULT_LOCAL_IP = "169.254.2.2"
@@ -123,7 +123,7 @@ def RunDccm(py_log_level):
 #
 if __name__ == '__main__':
 
-    log_facility = logging.handlers.SysLogHandler.LOG_LOCAL5
+    log_facility = logging.handlers.SysLogHandler.LOG_DAEMON
 
     logging.basicConfig(level=log_level,
                         format='%(asctime)s %(name)s %(levelname)s : %(message)s')
